feat(tribute): add social preview meta tags for Johan Land tribute page
Inject Open Graph and Twitter Card meta tags dynamically in JohanLandTribute.tsx to display johanLandwide.png hero image when shared on social platforms. Add static fallback meta tags with data-arc-johan attributes in index.html for social scrapers. Update ARCEngine submodule from f9cd449 to cc56d5f. Configure ARCEngine submodule to track main branch in .gitmodules.

--- a/client/index.html
+++ b/client/index.html
@@ -11,19 +11,30 @@
     <!-- META_TAGS_START -->
     <meta name="description" content="ARC Explainer is your resource hub for explaining, understanding, and sharing ARC 1 &amp; 2 puzzles—with fresh coverage of ARC-AGI-3 interactive agents." />
 
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook (default) -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://arc.markbarney.net/" />
     <meta property="og:title" content="ARC Explainer - Abstract Reasoning Corpus Analysis" />
     <meta property="og:description" content="Platform for explaining, understanding, and sharing Abstract Reasoning Corpus (ARC-AGI) puzzle knowledge." />
     <meta property="og:image" content="/og-preview.svg" />
 
-    <!-- Twitter -->
+    <!-- Johan Land Tribute (static preview overrides for social scrapers) -->
+    <meta property="og:title" content="Johan Land - ARC-AGI Grand Master | ARC Explainer" data-arc-johan />
+    <meta property="og:description" content="New SOTA public submission: 94.5% V1, 72.9% V2. Bespoke GPT-5.2 ensemble verified by ARC Prize." data-arc-johan />
+    <meta property="og:image" content="https://arc.markbarney.net/johanLandwide.png" data-arc-johan />
+    <meta property="og:url" content="https://arc.markbarney.net/hall-of-fame/johan-land" data-arc-johan />
+
+    <!-- Twitter (default) -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://arc.markbarney.net/" />
     <meta property="twitter:title" content="ARC Explainer - Abstract Reasoning Corpus Analysis" />
     <meta property="twitter:description" content="Platform for explaining, understanding, and sharing Abstract Reasoning Corpus (ARC-AGI) puzzle knowledge." />
     <meta property="twitter:image" content="/og-preview.svg" />
+
+    <!-- Twitter Johan override -->
+    <meta name="twitter:title" content="Johan Land - ARC-AGI Grand Master | ARC Explainer" data-arc-johan />
+    <meta name="twitter:description" content="New SOTA public submission: 94.5% V1, 72.9% V2. Bespoke GPT-5.2 ensemble verified by ARC Prize." data-arc-johan />
+    <meta name="twitter:image" content="https://arc.markbarney.net/johanLandwide.png" data-arc-johan />
 
     <title>ARC Explainer - ARC 1, ARC 2 &amp; ARC-AGI-3 Resource Hub</title>
     <!-- META_TAGS_END -->
